--- a/index (1).html
+++ b/index (1).html
@@ -1,106 +1,27 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<title>Amber Job - Erasmus Internships</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
-		<div id="wrapper">
-							
-			<div id="main">
-				<div class="inner">
-					<header id="header">
-						<a href="index.html" class="logo"><strong>Amber Job</strong> - Erasmus Internships</a>
-					</header>
-					<section id="about">
-						<header class="major">
-							<h2>About Us</h2>
-						</header>
-						<p>We are one of the leading consulting agencies in Europe for the past 10 years, facilitating internships for more than 3000 students to wonderful destinations. If you have been looking for an opportunity to travel and develop professionally, Amber Job is here to help you.</p>
-						<ul>
-							<li><strong>📈We'll help you Grow:📈</strong> Regardless of how hard it is to adapt in a new country and environment, we will help you make it.</li>
-							<li><strong>🧭We are your Compass🧭:</strong> With 10 years of experience and 3000 internees, we will be your guide.</li>
-							<li><strong>🌐Online Application:🌐</strong> Whether you want to have a 3 or 6 months internship, we have the best offer for you.</li>
-							<li><strong>🤝Full Support:🤝</strong> From the moment you submit your application, our team begins to assist you in finding the right Erasmus internship. We guide you through interviews, documentation, and preparation for the internship.</li>
-						</ul>
-					</section>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ASCII Quest</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <pre id="ascii-art">
+       ___                     _            
+      / _ \  _ __  _   _  ___ | |_ ___ _ __ 
+     | | | || '_ \| | | |/ _ \| __/ _ \ '__|
+     | |_| || | | | |_| | (_) | ||  __/ |   
+      \___/ |_| |_|\__,_|\___/ \__\___|_|   
+    </pre>
 
-					<section id="internships">
-						<header class="major">
-							<h2>Erasmus Internships</h2>
-						</header>
-						<div class="posts">
-							<article>
-								<h3>Kids Club Trainee</h3>
-								<p>We’re looking for Kids Club Trainees to join the fun in 4-5 star hotels in Greece and Cyprus! If you love working with kids, this is your chance!</p>
-								<img src="images/post1.png" alt="Kids Club Trainee" width="100%" />
-								<ul>
-									<li><strong>📅Duration:📅</strong> 3-6 months</li>
-									<li><strong>✅Benefits:✅</strong> 🏠Free accommodation🏠, 🍴meals🍴, 💶pocket money💶</li>
-									<li><strong>💼Role:💼</strong> Plan activities, supervise children, assist in events</li>
-								</ul>
-							</article>
+    <div id="text">Добро пожаловать в приключение! Куда ты хочешь пойти?</div>
 
-							<article>
-								<h3>Fitness Activities Leader</h3>
-								<p>We’re looking for trainees to complete internships as Fitness Activities Leaders in luxury hotels in Greece and Cyprus!</p>
-								<img src="images/post2.png" alt="Fitness Activities Leader" width="100%" />
-								<ul>
-									<li><strong>📅Duration:📅</strong> 3-6 months</li>
-									<li><strong>✅Benefits:✅</strong> 🏠Free accommodation🏠, 🍴meals🍴, 💶pocket money💶</li>
-									<li><strong>💼Role:💼</strong> Lead fitness classes, motivate guests, maintain gym facilities</li>
-								</ul>
-							</article>
+    <div id="choices">
+        <button onclick="makeChoice(1)">Войти в лес 🌲</button>
+        <button onclick="makeChoice(2)">Спуститься в подземелье 🏰</button>
+    </div>
 
-							<article>
-								<h3>Sports Tournaments Organizer</h3>
-								<p>Join us as a Sports Tournaments Organizer in top-tier hotels in Greece and Cyprus!</p>
-								<img src="images/post3.png" alt="Sports Tournaments Organizer" width="100%" />
-								<ul>
-									<li><strong>📅Duration:📅</strong> 3-6 months</li>
-									<li><strong>✅Benefits:✅</strong> 🏠Free accommodation🏠, 🍴meals🍴, 💶pocket money💶</li>
-									<li><strong>💼Role:💼</strong> Organize tournaments, set up equipment, engage with guests</li>
-								</ul>
-							</article>
-
-							<article>
-								<h3>SPA Trainee</h3>
-								<p>We’re looking for SPA Trainees to join luxury hotels in Greece and Cyprus! If you’re passionate about wellness, this is for you!</p>
-								<img src="images/post4.png" alt="SPA Trainee" width="100%" />
-								<ul>
-									<li><strong>📅Duration:📅</strong> 3-6 months</li>
-									<li><strong>✅Benefits:✅</strong> 🏠Free accommodation🏠, 🍴meals🍴, 💶pocket money💶</li>
-									<li><strong>💼Role:💼</strong> Assist with treatments, maintain spa environment, schedule appointments</li>
-								</ul>
-							</article>
-
-							<article>
-								<h3>Food & Beverage Trainee</h3>
-								<p>Join as a Food & Beverage Trainee in luxury hotels in Greece and Cyprus! Learn and grow in the hospitality industry!</p>
-								<img src="images/post5.png" alt="Food and Beverage Trainee" width="100%" />
-								<ul>
-									<li><strong>📅Duration:📅</strong> 3-6 months</li>
-									<li><strong>✅Benefits:✅</strong> 🏠Free accommodation🏠, 🍴meals🍴, 💶pocket money💶</li>
-									<li><strong>💼Role:💼</strong> Serve guests, assist in dining and bar areas, ensure top-tier experience</li>
-								</ul>
-							</article>
-
-							<article>
-								<h3>Gastronomy Trainee</h3>
-								<p>👨‍🍳 Cook Up Your Future in Hospitality! 👩‍🍳</p>
-								<p>✨ We’re inviting passionate Gastronomy Students to join the culinary teams at 4-5 star hotels in Greece and Cyprus! This is your chance to refine your skills and learn from top chefs in a world-class setting. 🌍</p>
-								<img src="images/post5.png" alt="Gastronomy Trainee" width="100%" />
-								<ul>
-									<li><strong>📅Duration:📅</strong> 3-6 months</li>
-									<li><strong>✅Benefits:✅</strong> 🏠Free accommodation at the staff house🏠, 🍴Free meals🍴, 💶Pocket money💶</li>
-									<li><strong>💼Role:💼</strong> Assist in preparing exquisite dishes, learn food preparation techniques, gain hands-on experience in kitchen </li>
-								</ul>
-						</article>
-					</div>
-				</section>
-			</div>
-		</div>
-	</body>
+    <script src="script.js"></script>
+</body>
 </html>
