--- a/index.html
+++ b/index.html
@@ -8,22 +8,11 @@
 </head>
 <body>
     <div id="game-container">
-        <pre id="ascii-art">
-       ___                     _            
-      / _ \  _ __  _   _  ___ | |_ ___ _ __ 
-     | | | || '_ \| | | |/ _ \| __/ _ \ '__|
-     | |_| || | | | |_| | (_) | ||  __/ |   
-      \___/ |_| |_|\__,_|\___/ \__\___|_|   
-        </pre>
-
-        <div id="text">Welcome to the adventure! Where do you want to go?</div>
-
-        <div id="choices">
-            <button onclick="makeChoice(1)">Enter the forest 🌲</button>
-            <button onclick="makeChoice(2)">Descend into the dungeon 🏰</button>
-        </div>
+        <pre id="ascii-art"></pre>
+        <div id="text"></div>
+        <div id="choices"></div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
