--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <pre id="ascii-art"></pre>
         <div id="text"></div>
         <div id="choices"></div>
+        <button id="theme-toggle">Change Theme</button>
     </div>
 
     <script src="script.js" defer></script>
