--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
     <div id="game-container">
         <button id="theme-toggle">Change Theme</button>
-        <pre id="ascii-art"></pre>
-        <div id="text"></div>
-        <div id="choices"></div>
-    </div>
+<div id="game-container">
+    <pre id="ascii-art"></pre>
+    <div id="text"></div>
+    <div id="choices"></div>
+</div>
 
     <script src="script.js" defer></script>
 </body>
