--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <div id="choices"></div>
 </div>
 
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
 </body>
 </html>
