--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ASCII Quest</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>ASCII Quest</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="game-container">
-        <button id="theme-toggle">Change Theme</button>
-<div id="game-container">
+  <button id="theme-toggle">Change Theme</button>
+  <div id="game-container">
     <pre id="ascii-art"></pre>
     <div id="text"></div>
     <div id="choices"></div>
-</div>
+  </div>
 
-    <script src="script.js"></script>
+  <!-- Без defer -->
+  <script src="script.js"></script>
 </body>
 </html>
