--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ASCII Quest</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <button id="theme-toggle">Change Theme</button>
@@ -12,8 +13,6 @@
     <div id="text"></div>
     <div id="choices"></div>
   </div>
-
-  <!-- Без defer -->
   <script src="script.js"></script>
 </body>
 </html>
