--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 <body>
   <button id="theme-toggle">Change Theme</button>
   <div id="game-container">
-    <pre id="ascii-art"></pre>
-    <div id="text"></div>
-    <div id="choices"></div>
+    <div class="column-layout">
+      <div class="left-column">
+        <pre id="ascii-art"></pre>
+      </div>
+      <div class="right-column">
+        <div id="text"></div>
+        <div id="choices"></div>
+      </div>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
