--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="ASCII Quest — text based adventured game built with HTML, CSS ,JavaScript.">
   <title>ASCII Quest</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <button id="theme-toggle">Change Theme</button>
+
+  <h1>ASCII Quest</h1>
+  <h2>Interactive Text Adventure Game</h2>
+
   <div id="game-container">
     <div class="column-layout">
       <div class="left-column">
@@ -19,6 +24,7 @@
       </div>
     </div>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
