--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <button id="theme-toggle">Change Theme</button>
-
+  <div id="timestamp">Last action: never</div>
   <h1>ASCII Quest</h1>
   <h2>Interactive Text Adventure Game</h2>
 
