--- a/index.html
+++ b/index.html
@@ -14,16 +14,19 @@
   <h2>Interactive Text Adventure Game</h2>
 
   <div id="game-container">
-    <div class="column-layout">
-      <div class="left-column">
+  <div class="column-layout">
+    <div class="left-column">
+      <div class="ascii-box">
         <pre id="ascii-art"></pre>
       </div>
-      <div class="right-column">
-        <div id="text"></div>
-        <div id="choices"></div>
-      </div>
+    </div>
+    <div class="right-column">
+      <div id="text"></div>
+      <div id="choices"></div>
     </div>
   </div>
+</div>
+
 
   <script src="script.js"></script>
 </body>
